--- a/app/src/main/res/layout/fragment_forum_details.xml
+++ b/app/src/main/res/layout/fragment_forum_details.xml
@@ -143,7 +143,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/followButton"
-                    style="@style/FollowButton"
+                    style="@style/FollowButton.Normal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
