--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -32,8 +32,6 @@
                     android:id="@+id/userTopLayout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/user_details_border"
-                    android:padding="@dimen/spacing_normal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
@@ -83,7 +81,7 @@
                     style="@style/UserDetailsText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_normal"
+                    android:layout_marginTop="@dimen/spacing_large"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/userTopLayout"
@@ -99,6 +97,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/aboutTextView"
+                    app:layout_goneMarginTop="@dimen/spacing_large"
                     tools:text="93 Upvotes" />
 
                 <TextView
