--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,12 +60,15 @@
     </style>
 
     <style name="FollowButton" parent="Widget.MaterialComponents.Button.UnelevatedButton.Icon">
+        <item name="backgroundTint">?colorSecondary</item>
+        <item name="iconTint">?colorPrimary</item>
+    </style>
+
+    <style name="FollowButton.Normal">
         <item name="android:text">@string/msg_follow</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">?colorPrimary</item>
-        <item name="backgroundTint">?colorSecondary</item>
         <item name="iconSize">@dimen/button_icon_size</item>
-        <item name="iconTint">?colorPrimary</item>
     </style>
 
     <style name="ForumNumText" parent="Text.Primary">
