Remove toolbar elevation when tabs goes under toolbar in XML

--- a/app/src/main/res/layout/fragment_user_host.xml
+++ b/app/src/main/res/layout/fragment_user_host.xml
@@ -20,7 +20,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/userTabLayout"
-            style="@style/AppTabLayout"
+            style="@style/AppTabLayout.WithToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable" />
