Add ripple and pressed state for list items

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,6 +36,9 @@
     <color name="chip_topic_background">@color/transparent</color>
     <color name="chip_topic_border">@color/green_fern</color>
 
+    <color name="list_item_pressed">@color/gray_silver</color>
+    <color name="list_item_ripple">@color/blue_dodger_opacity_50</color>
+
     <color name="divider">@color/gray_athens</color>
     <color name="progress_auth_background">@color/white_opacity_50</color>
 
@@ -50,6 +53,7 @@
 
     <!-- Palette Blue -->
     <color name="blue_dodger">#2E9FFF</color>
+    <color name="blue_dodger_opacity_50">#802E9FFF</color>
 
     <!-- Palette Red -->
     <color name="red_froly">#F05F70</color>
