Fix getting transparent color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
     </style>
 
     <style name="AppToolbar.Collapsing">
-        <item name="android:background">@color/transparent</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
     <style name="AppToolbar.WithTabs">
