Add bullet divider between username and date of discussion, and change text styling

--- a/app/src/main/res/layout/fragment_discussion_details.xml
+++ b/app/src/main/res/layout/fragment_discussion_details.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/titleTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textAppearance="@style/DiscussionDetailsTitle"
+                    android:textAppearance="@style/Text.Primary.Title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -75,16 +75,27 @@
                         android:textAppearance="@style/Text.Secondary"
                         app:layout_constraintStart_toStartOf="@id/authorTextView"
                         app:layout_constraintTop_toBottomOf="@id/authorTextView"
-                        tools:text="\@akhbulatov" />
+                        tools:text="\@username" />
+
+                    <TextView
+                        android:id="@+id/bulletDividerTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginEnd="6dp"
+                        android:text="@string/symbol_bullet"
+                        app:layout_constraintBaseline_toBaselineOf="@id/usernameTextView"
+                        app:layout_constraintEnd_toStartOf="@id/dateTextView"
+                        app:layout_constraintStart_toEndOf="@id/usernameTextView" />
 
                     <TextView
                         android:id="@+id/dateTextView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/spacing_normal"
-                        android:textAppearance="@style/Text.Date"
-                        app:layout_constraintBottom_toBottomOf="@id/usernameTextView"
-                        app:layout_constraintStart_toEndOf="@id/usernameTextView"
+                        android:textAppearance="@style/Text.Date.Normal"
+                        app:layout_constraintBaseline_toBaselineOf="@id/usernameTextView"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/bulletDividerTextView"
                         tools:text="@tools:sample/date/ddmmyy" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -101,7 +112,7 @@
                         android:id="@+id/messageTextView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textAppearance="@style/DiscussionDetailsMessage"
+                        android:textAppearance="@style/Text.Content"
                         app:layout_constraintBottom_toTopOf="@id/topicChipGroup"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
