--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <dimen name="font_secondary">14sp</dimen>
     <dimen name="font_small">12sp</dimen>
 
+    <dimen name="font_content">15sp</dimen>
+
     <dimen name="spacing_xlarge">30dp</dimen>
     <dimen name="spacing_large">24dp</dimen>
     <dimen name="spacing_normal">16dp</dimen>
