--- a/app/src/main/res/layout/fragment_user_comments.xml
+++ b/app/src/main/res/layout/fragment_user_comments.xml
@@ -19,9 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingStart="@dimen/spacing_micro"
+            android:paddingStart="@dimen/spacing_small"
             android:paddingTop="@dimen/spacing_content_vertical"
-            android:paddingEnd="@dimen/spacing_micro"
+            android:paddingEnd="@dimen/spacing_small"
             android:paddingBottom="@dimen/spacing_content_vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="3"
