--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -66,16 +66,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/authorTextView"
-            app:layout_constraintTop_toBottomOf="@id/messageTextView" />
+            app:layout_constraintTop_toBottomOf="@id/messageTextView"
+            tools:text="10" />
 
         <TextView
             android:id="@+id/downvoteTextView"
             style="@style/CommentVoteText.Downvote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_small"
+            android:layout_marginStart="10dp"
             app:layout_constraintStart_toEndOf="@id/upvoteTextView"
-            app:layout_constraintTop_toTopOf="@id/upvoteTextView" />
+            app:layout_constraintTop_toTopOf="@id/upvoteTextView"
+            tools:text="0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
