--- a/app/src/main/res/layout/fragment_channel_details.xml
+++ b/app/src/main/res/layout/fragment_channel_details.xml
@@ -75,16 +75,82 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/followButton"
-                style="@style/FollowButton.Normal"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/spacing_normal"
-                android:layout_marginBottom="@dimen/spacing_normal"
+                android:paddingTop="@dimen/spacing_normal"
+                android:paddingBottom="@dimen/spacing_normal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/endGuideline"
-                app:layout_constraintTop_toBottomOf="@id/descriptionDivider" />
+                app:layout_constraintStart_toStartOf="@id/startGuideline"
+                app:layout_constraintTop_toBottomOf="@id/descriptionDivider">
+
+                <!-- Discussions. Start -->
+                <LinearLayout
+                    android:id="@+id/numDiscussionsLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/numFollowersLayout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/numDiscussionsTextView"
+                        style="@style/ForumNumText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="5 368" />
+
+                    <TextView
+                        style="@style/ForumNumSubtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/channel_details_discussions" />
+
+                </LinearLayout>
+                <!-- Discussions. End -->
+
+                <!-- Followers. Start -->
+                <LinearLayout
+                    android:id="@+id/numFollowersLayout"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/spacing_xlarge"
+                    android:layout_marginEnd="@dimen/spacing_normal"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/followButton"
+                    app:layout_constraintStart_toEndOf="@id/numDiscussionsLayout"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/numFollowersTextView"
+                        style="@style/ForumNumText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="268 368" />
+
+                    <TextView
+                        style="@style/ForumNumSubtext"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/channel_details_followers" />
+
+                </LinearLayout>
+                <!-- Followers. End -->
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/followButton"
+                    style="@style/FollowButton.Normal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
