Add "About" screen (no data yet)

--- a/app/src/main/res/menu/my_profile.xml
+++ b/app/src/main/res/menu/my_profile.xml
@@ -8,4 +8,9 @@
         android:title="@string/msg_share"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/menu_about_app"
+        android:title="@string/my_profile_about_app"
+        app:showAsAction="never" />
+
 </menu>
