--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -147,6 +147,7 @@
     </style>
 
     <style name="AboutItem">
+        <item name="android:background">?selectableItemBackground</item>
         <item name="android:drawablePadding">@dimen/spacing_large</item>
         <item name="android:padding">@dimen/spacing_normal</item>
         <item name="android:textAppearance">@style/Text.Primary.Normal</item>
