--- a/app/src/main/res/layout/item_app_library.xml
+++ b/app/src/main/res/layout/item_app_library.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/spacing_normal">
+    android:paddingStart="@dimen/spacing_normal"
+    android:paddingTop="12dp"
+    android:paddingEnd="@dimen/spacing_normal"
+    android:paddingBottom="12dp">
 
     <TextView
         android:id="@+id/nameTextView"
