Move inflate menu of toolbars to XML

--- a/app/src/main/res/layout/fragment_discussion_details.xml
+++ b/app/src/main/res/layout/fragment_discussion_details.xml
@@ -10,6 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:menu="@menu/discussion_details"
         app:navigationIcon="@drawable/ic_arrow_back" />
 
     <FrameLayout
