--- a/app/src/main/res/layout/fragment_channel_host.xml
+++ b/app/src/main/res/layout/fragment_channel_host.xml
@@ -38,6 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_collapseMode="pin"
+                    app:menu="@menu/forum_channel_host"
                     app:navigationIcon="@drawable/ic_arrow_back" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
