Rename style used for overflow menu

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,7 @@
         <item name="colorOnPrimary">@color/text_primary</item>
         <item name="colorOnSurface">@color/text_primary</item>
 
-        <item name="actionOverflowButtonStyle">@style/AppOverflowIcon</item>
+        <item name="actionOverflowButtonStyle">@style/AppOverflowButton</item>
         <item name="bottomNavigationStyle">@style/AppBottomNavView</item>
         <item name="toolbarStyle">@style/AppToolbar</item>
 
