--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,7 +55,7 @@
         <item name="android:elevation">0dp</item>
     </style>
 
-    <style name="AppOverflowIcon" parent="Widget.AppCompat.Light.ActionButton.Overflow">
+    <style name="AppOverflowButton" parent="Widget.AppCompat.Light.ActionButton.Overflow">
         <item name="android:tint">@color/icon_background</item>
     </style>
 
