Fix "Share" icon on toolbars of "Channel Host" and "Forum Host" screens

--- a/app/src/main/res/layout/fragment_forum_host.xml
+++ b/app/src/main/res/layout/fragment_forum_host.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways"
+            app:menu="@menu/forum_channel_host"
             app:navigationIcon="@drawable/ic_arrow_back"
             tools:title="@tools:sample/lorem" />
 
