--- a/app/src/main/res/menu/my_profile.xml
+++ b/app/src/main/res/menu/my_profile.xml
@@ -9,6 +9,11 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/menu_sign_out"
+        android:title="@string/my_profile_sign_out"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_about_app"
         android:title="@string/my_profile_about_app"
         app:showAsAction="never" />
